# NHL-Analytics

./: .gitignore  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/workflows/: proc_pull_box.yml  proc_pull_odds.yml  proc_pull_player.yml
app/: README.md  app.py  app_nhl_mapper.py  i18n.py  requirements.txt
app/data/: teamlist.csv
app/exe/: draft_analysis.py  map_utils.py  player_stats.py  team_stats.py
app/views/: about.py  blocking_shots.py  goalie_stats.py  home.py  magnifiques_patineuses.py  scoreboard.py  skater_stats.py  team_season_stats.py  teams_map.py
container/: .dockerignore  Dockerfile  README.md  requirements.txt
databricks/docs/: scheduling_guide.md
databricks/jobs/: nhl_combine_volumes.py  nhl_daily_ingestion.py
databricks/llm/: README.md
dev/decision_science/: readme.md
dev/homeice_advantage/: eda_intro_homeice_wins.py
dev/player_college/: NHL_player_college_process.ipynb  diagram_headline.drawio  eda_CollegeNHL.py  player_college_matching.py  readme.md
dev/player_team_success/: measurement_playerteamSuccess_PerformanceParity.ipynb  readme.md
dev/pythagorian_expectations/: data_pythagorean_expectation.csv  (+1 more)
docs/: CNAME  _config.yml  hockey_measure_identification.csv  index.md
latest/: 2023_bettingOdds.csv  2024_gamelist_raw.csv  readme.md
latest/box/: readme.md  (+22 more)
src/: NHL_gameData_process_functions.py  NHL_gameData_pull.py  nhl_analytics_data_pull.py  nhl_data_summary_scrape_eg.md  requirements.txt
(+176 files in other folders)
